Stopped slideshow title and description being hidden on mobile for DT-2504

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -642,6 +642,7 @@
 
 // Use Background-image Method
 .responsiveslideshow__figure {
+    background-color: transparent;
     background-size: cover;
     background-position: center;
 }
@@ -659,9 +660,6 @@
     bottom: 140px;
     width: 100%;
     padding: 20px;
-    @media @mobile {
-        display: none;
-    }
 }
 
 .responsiveslideshow__image-title, 
@@ -673,10 +671,20 @@
     font-size: @font-swatch3-font-size;
     line-height: @font-swatch3-line-height;
     color: @color__slideshow-title--text;
+    
+    @media @mobile {
+        font-size: 15px;
+        line-height: 26px;
+    }
 }
 
 .responsiveslideshow__image-description {
     color: @color__slideshow-description--text;
+    
+    @media @mobile {
+        font-size: 14px;
+        line-height: 21px;
+    }
 }
 
 
